# eiger-code-challenge

./: .gitignore  Cargo.toml  LICENSE  README.md  chainspec.toml  run.sh  setup.sh
examples/: comms.rs
resources/: config.toml  example_public_key.pem  example_secret_key.pem
src/: eiger_node.rs  error.rs  event.rs  handshake.rs  lib.rs  message.rs  node.rs  utils.rs
src/casper_types/: bincode_format.rs  chainspec.rs  crypto.rs  message.rs  mod.rs  protocol_version.rs  ser_deser.rs
src/casper_types/chainspec/: accounts_config.rs  activation_point.rs  core_config.rs  deploy_config.rs  global_state_update.rs  highway_config.rs  network_config.rs  parse_toml.rs  protocol_config.rs  system_config.rs  wasm_config.rs
src/casper_types/chainspec/accounts_config/: account_config.rs  delegator_config.rs  validator_config.rs
src/comms/: builder.rs  error.rs  message.rs  mod.rs  tls_utils.rs
