[package]
name = "eiger-code-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.1"
rcgen = "0.11.1"
rustls = { version = "0.21.5", default-features = false, features = ["quic", "dangerous_configuration"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
bytes = "1.4.0"
tracing = "0.1.37"
ed25519 = "2.2.1"
x25519-dalek = "2.0.0-rc.3"
blsttc = "8.0.2"
bincode = "1.3.3"
serde = "1.0.171"

[[example]]
name = "comms"