[package]
name = "eiger-code-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
quinn = "0.10.1"
rcgen = "0.11.1"
rustls = { version = "0.21.5", default-features = false, features = ["quic", "dangerous_configuration"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time", "full"] }
bytes = "1.4.0"
tracing = "0.1.37"
ed25519 = "2.2.1"
x25519-dalek = { version = "2.0.0-pre.0", features = ["getrandom", "reusable_secrets", "static_secrets"] }
#blsttc = "8.0.2"
bincode = "1.3.3"
serde = { version = "1", features = ["derive", "rc"] }
sha3 = "0.10.8"
base16 = "0.2.1"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
openssl = "0.10.55"
tokio-openssl = "0.6.1"
datasize = { version = "0.2.11", features = ["detailed", "fake_clock-types", "futures-types", "smallvec-types"] }
serde-big-array = "0.3.0"
casper-hashing = "2.0.0"
casper-types = "3.0.0"
k256 = "0.13.1"
ed25519-dalek = "2.0.0"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }

[[example]]
name = "comms"