[package]
name = "eiger-code-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time", "full"] }
bytes = "1.4.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive", "rc"] }
base16 = "0.2.1"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
openssl = "0.10.55"
tokio-openssl = "0.6.1"
datasize = { version = "0.2.11", features = ["detailed", "fake_clock-types", "futures-types", "smallvec-types"] }
serde-big-array = "0.3.0"
casper-hashing = "2.0.0"
casper-types = "3.0.0"
k256 = "0.13.1"
ed25519-dalek = "2.0.0"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
rmp-serde = "0.14.4"
tokio-util = { version = "0.6.4", features = ["codec"] }
futures = "0.3.5"
thiserror = "1"
num = { version = "0.4.0", features = ["serde"] }
base64 = "0.13.0"
toml = "0.5.6"
uint = "0.9.0"

[[bin]]
name = "eiger_node"